<resources>
    <string name="app_name">Calculator0</string>

    <!-- Numbers -->
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_point">.</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_sign">+/-</string>
    <string name="text_0">0</string>

    <!-- ImageButton -->
    <string name="imageDes1">history</string>
    <string name="imgDes2">scientific</string>
    <string name="imgDes3">EMI</string>
    <string name="imgDes4">backspace</string>

    <!-- Operations -->
    <string name="text_clear">C</string>
    <string name="text_betweenBrackets">( )</string>
    <string name="text_percent">%</string>
    <string name="text_divided">÷</string>
    <string name="text_multiplicand">×</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_equal">=</string>
    <string name="text_input">15 + 15</string>
    <string name="text_result">30</string>
</resources>