<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/current_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:fontFamily="@font/roboto"
        android:paddingEnd="@dimen/_25sdp"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/_24sdp"
        android:text="@string/text_input"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_36ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textDirection="rtl"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom"
        android:paddingEnd="@dimen/_25sdp"
        android:paddingStart="0dp"
        android:text="@string/text_result"
        android:textColor="@color/gray"
        android:textDirection="rtl"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_input" />

    <ImageButton
        android:id="@+id/no_history"
        android:layout_width="@dimen/_57sdp"
        android:layout_height="@dimen/_57sdp"
        app:srcCompat="@drawable/no_history"
        app:layout_constraintTop_toBottomOf = "@+id/result"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imageDes1" />

    <ImageButton
        android:id="@+id/scientific"
        android:layout_width="@dimen/_57sdp"
        android:layout_height="@dimen/_57sdp"
        app:layout_constraintTop_toBottomOf = "@+id/result"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        app:srcCompat="@drawable/ic_math"
        app:layout_constraintLeft_toRightOf = "@+id/no_history"
        android:contentDescription="@string/imgDes2" />



    <ImageButton
        android:id="@+id/emi"
        android:layout_width="@dimen/_57sdp"
        android:layout_height="@dimen/_57sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        app:srcCompat="@drawable/dollar"
        app:layout_constraintLeft_toRightOf="@+id/scientific"
        app:layout_constraintTop_toBottomOf="@+id/result"
        android:contentDescription="@string/imgDes3" />

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="@dimen/_57sdp"
        android:layout_height="@dimen/_57sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        app:srcCompat="@drawable/backspace"
        android:layout_marginStart="@dimen/_50sdp"
        app:layout_constraintLeft_toRightOf="@+id/emi"
        app:layout_constraintTop_toBottomOf="@+id/result"
        android:contentDescription="@string/imgDes4" />

    <View
        android:layout_width="@dimen/_270sdp"
        android:layout_height="1dp"
        android:background="@color/white2"
        app:layout_constraintTop_toBottomOf="@+id/no_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/roboto"
        android:text="@string/text_clear"
        android:textColor="@color/red"
        android:textSize="@dimen/_25ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_history" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/betweenBrackets"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/text_betweenBrackets"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintLeft_toRightOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/no_history"
        style="@style/operations" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/percent"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/text_percent"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintLeft_toRightOf="@+id/betweenBrackets"
        app:layout_constraintTop_toBottomOf="@+id/no_history"
        style="@style/operations"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/divided"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/text_divided"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/no_history"
        style="@style/operations"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_7"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:text="@string/text_7"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        android:textSize="@dimen/_30ssp"
        style="@style/numbers" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_8"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_8"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_7"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_9"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_9"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_8"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/multiplicand"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/text_multiplicand"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_9"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        style="@style/operations"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_4"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/text_4"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_7"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_5"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_5"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_4"
        app:layout_constraintTop_toBottomOf="@+id/_7"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_6"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_6"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_5"
        app:layout_constraintTop_toBottomOf="@+id/_7"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/text_minus"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_6"
        app:layout_constraintTop_toBottomOf="@+id/_7"
        style="@style/operations"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_1"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/text_1"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_4"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_2"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_2"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_1"
        app:layout_constraintTop_toBottomOf="@+id/_4"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_3"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_3"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_2"
        app:layout_constraintTop_toBottomOf="@+id/_4"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/text_plus"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_3"
        app:layout_constraintTop_toBottomOf="@+id/_4"
        style="@style/operations"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/text_sign"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_1"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_0"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_0"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/sign"
        app:layout_constraintTop_toBottomOf="@+id/_1"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/point"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/text_point"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/_0"
        app:layout_constraintTop_toBottomOf="@+id/_1"
        style="@style/numbers"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equals"
        android:layout_width="@dimen/_66sdp"
        android:layout_height="@dimen/_59sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/text_equal"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintLeft_toRightOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/_1"
        style="@style/operations"/>


</androidx.constraintlayout.widget.ConstraintLayout>